Fixed jitpack